[package]
name = "clauser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pad = "0.1.6"
serde = { version = "1.0.203", features = ["derive", "std"] }
serde_path_to_error = "0.1.16"
clauser_macros = { path = "./macros" }